--- a/app/src/main/res/layout/activity_medications.xml
+++ b/app/src/main/res/layout/activity_medications.xml
@@ -84,12 +84,33 @@
                 android:textAlignment="center"
                 android:textSize="16sp" />
 
-            <TimePicker
-                android:id="@+id/tpMedTime"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:timePickerMode="spinner" />
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnMedicationSelectTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp"
+                    android:text="@string/select_time_prompt"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginEnd="5dp"/>
+
+                <EditText
+                    android:id="@+id/etMedicationTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ems="10"
+                    android:hint="@string/time_hint"
+                    android:focusable="false"
+                    android:inputType="none"
+                    android:gravity="center"
+                    android:importantForAutofill="no" />
+
+            </LinearLayout>
 
             <Button
                 android:id="@+id/btnAddMedication"
