--- a/app/src/main/res/layout/appointments_fragment.xml
+++ b/app/src/main/res/layout/appointments_fragment.xml
@@ -26,5 +26,7 @@
         android:layout_margin="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_create_entry" />
+        app:srcCompat="@drawable/ic_create_entry"
+        android:contentDescription="@string/add_appointment_content_description"
+        android:focusable="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
