--- a/app/src/main/res/layout/medications_list_view.xml
+++ b/app/src/main/res/layout/medications_list_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/appointment_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -25,17 +26,18 @@
                 android:id="@+id/tvMedicationName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Paracetamol"
+                android:text="@string/medication_name_placeholder"
                 android:textStyle="bold"
                 android:textSize="25sp"
-                android:layout_marginStart="5dp" />
+                android:layout_marginStart="5dp"
+                tools:ignore="RelativeOverlap" />
 
             <TextView
                 android:id="@+id/tvTimeLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvMedicationName"
-                android:text="Daily time to take medication:"
+                android:text="@string/daily_time_to_take_medication"
                 android:textSize="15sp"
                 android:layout_marginStart="5dp" />
 
@@ -45,7 +47,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvMedicationName"
                 android:layout_toEndOf="@id/tvTimeLabel"
-                android:text="10:00"
+                android:text="@string/time_hint"
                 android:textSize="15sp"
                 android:layout_marginStart="5dp" />
 
@@ -57,8 +59,9 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:text="Doses Left:"
-                android:textSize="15sp" />
+                android:text="@string/doses_left"
+                android:textSize="15sp"
+                tools:ignore="RelativeOverlap" />
 
             <TextView
                 android:id="@+id/tvStock"
@@ -68,7 +71,7 @@
                 android:layout_below="@+id/tvStockLabel"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:text="8"
+                android:text="@string/doses_left_prompt"
                 android:textStyle="bold"
                 android:textSize="25sp" />
 
@@ -77,7 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvTimeLabel"
-                android:text="Dose size:"
+                android:text="@string/dose_size_prompt"
                 android:textSize="15sp"
                 android:layout_marginStart="5dp" />
 
@@ -87,7 +90,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvTime"
                 android:layout_toEndOf="@id/tvDoseSizeLabel"
-                android:text="1"
+                android:text="@string/medication_dose_amount_template"
                 android:textSize="15sp"
                 android:layout_marginStart="5dp" />
 
@@ -97,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/tvTime"
                 android:layout_toEndOf="@id/tvDoseSize"
-                android:text="Tablet(s)"
+                android:text="@string/dose_type_prompt"
                 android:textSize="15sp"
                 android:layout_marginStart="5dp" />
         </RelativeLayout>
