--- a/app/src/main/res/layout/notes_fragment.xml
+++ b/app/src/main/res/layout/notes_fragment.xml
@@ -12,12 +12,13 @@
         android:layout_height="match_parent"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        android:hint="type any notes here"
+        android:hint="@string/notes_hint"
         android:background="@android:color/transparent"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 </androidx.constraintlayout.widget.ConstraintLayout>
